@@ -1,5 +1,6 @@
 2021-06-14 Dusan Jocic <dusanjocic@msn.com>
 	* [Engine] Renderer dynamic module should have dot (.) before arch
+	* [Engine] Early out of idCmdSystemLocal::CompleteArgument and idCmdSystemLocal::SetCommandCompletionFunc
 
 2021-06-13 Dusan Jocic <dusanjocic@msn.com>
 	* [RenderSystem] Fixed blended of texture detail
